Mon Jul 23 19:38:23 UTC 2007  Wallace Zhang  <zhang_w@ociweb.com>

        * tao/Object_KeyC.cpp:
        * tao/diffs/Object_Key.diff:

          Fixed a warning in the WinCE VC8 debug build.

Mon Jul 23 13:19:19 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * NEWS:

          Added item about support for forward declared IDL structs
          and unions in the IFR loader.

Mon Jul 23 12:35:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * tests\OctetSeq\client.cpp:
        * tests\OctetSeq\server.cpp:
        * performance-tests\Protocols\distributor.cpp:
        * performance-tests\Protocols\receiver.cpp:
        * performance-tests\Protocols\sender.cpp:

          Add small delay to shutdown between run loop and destroy orb.

Mon Jul 23 12:21:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Muxed_TMS.{h,cpp}
        * tao/Transport_Mux_Strategy.{h,cpp}:
          Moved lock_ from base to derived class, no need to be in
          the base

Mon Jul 23 12:12:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Exclusive_TMS.h:
          Removed commented out code

        * tao/GIOP_Message_Base.cpp:
          Layout changes

        * tao/GIOP_Message_Generator_Parser_10.h:
        * tao/GIOP_Message_Generator_Parser_12.h:
          Reduced number of forward declarations

Mon Jul 23 11:58:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IIOP_Acceptor.cpp:
          Const change

        * tao/Reply_Dispatcher.h:
          Reduced number of forward declarations

Mon Jul 23 11:36:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/GIOP_Message_Base.{h,cpp}:
          Removed parse_incoming_messages method and message_state_ member,
          both are not used at all

        * tao/GIOP_Message_State.{h,inl}:
          Removed reset method, it is not used anymore

Mon Jul 23 11:18:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
