@@ -1,2 +1,0 @@
-dynamic IIOP_Lite_Factory Service_Object * TAO:_make_TAO_IIOP_Lite_Protocol_Factory() ""
-static Advanced_Resource_Factory "-ORBProtocolFactory IIOP_Lite_Factory"
