@@ -1,2 +1,0 @@
-dynamic UIOP_Lite_Factory Service_Object * TAO_Strategies:_make_TAO_UIOP_Lite_Protocol_Factory() ""
-static Advanced_Resource_Factory "-ORBProtocolFactory UIOP_Lite_Factory"
