@@ -1,3 +1,12 @@
+Tue Jul 24 06:56:23 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * performance-tests/Cubit/TAO/IDL_Cubit/iiop_lite.conf:
+        * performance-tests/Cubit/TAO/IDL_Cubit/iiop_lite.conf.xml:
+        * performance-tests/Cubit/TAO/IDL_Cubit/run_test_lite.pl:
+        * performance-tests/Cubit/TAO/IDL_Cubit/uiop_lite.conf:
+        * performance-tests/Cubit/TAO/IDL_Cubit/uiop_lite.conf.xml:
+          Removed, lite protocols are not supported anymore
+
 Mon Jul 23 19:38:23 UTC 2007  Wallace Zhang  <zhang_w@ociweb.com>
 
         * tao/Object_KeyC.cpp:
